typo: TSL should be TLS

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -154,35 +154,35 @@ journalDirectory=/tmp/bk-txn
 # isForceGCAllowWhenNoSpace=false
 
 #############################################################################
-## TSL settings
+## TLS settings
 #############################################################################
 
-# TSL Provider (JDK or OpenSSL).
-# tslProvider=OpenSSL
+# TLS Provider (JDK or OpenSSL).
+# tlsProvider=OpenSSL
 
 # The path to the class that provides security.
-# tslProviderFactoryClass=org.apache.bookkeeper.security.SSLContextFactory
+# tlsProviderFactoryClass=org.apache.bookkeeper.security.SSLContextFactory
 
 # Type of security used by server.
-# tslClientAuthentication=true
+# tlsClientAuthentication=true
 
 # Bookie Keystore type.
-# tslKeyStoreType=JKS
+# tlsKeyStoreType=JKS
 
 # Bookie Keystore location (path).
-# tslKeyStore=null
+# tlsKeyStore=null
 
 # Bookie Keystore password path, if the keystore is protected by a password.
-# tslKeyStorePasswordPath=null
+# tlsKeyStorePasswordPath=null
 
 # Bookie Truststore type.
-# tslTrustStoreType=null
+# tlsTrustStoreType=null
 
 # Bookie Truststore location (path).
-# tslTrustStore=null
+# tlsTrustStore=null
 
 # Bookie Truststore password path, if the trust store is protected by a password.
-# tslTrustStorePasswordPath=null
+# tlsTrustStorePasswordPath=null
 
 #############################################################################
 ## Long poll request parameter settings
