get Keys from link

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -37,11 +37,10 @@ RUN set -x \
     && wget -q "https://archive.apache.org/dist/bookkeeper/bookkeeper-${BK_VERSION}/${DISTRO_NAME}.tar.gz.asc" \
     && wget -q "https://archive.apache.org/dist/bookkeeper/bookkeeper-${BK_VERSION}/${DISTRO_NAME}.tar.gz.md5" \
     && wget -q "https://archive.apache.org/dist/bookkeeper/bookkeeper-${BK_VERSION}/${DISTRO_NAME}.tar.gz.sha1" \
+    && wget -q "https://archive.apache.org/dist/bookkeeper/KEYS" \
     && md5sum -c ${DISTRO_NAME}.tar.gz.md5 \
     && sha1sum -c ${DISTRO_NAME}.tar.gz.sha1 \
-    && tmpKey=`gpg --verify ${DISTRO_NAME}.tar.gz.asc ${DISTRO_NAME}.tar.gz 2>&1` || echo "ignore command error" \
-    && GPG_KEY=`echo $tmpKey | grep -o '\<[0-9A-F]\{7,\}\>'` \
-    && gpg --keyserver ha.pool.sks-keyservers.net --recv-key "$GPG_KEY" \
+    && gpg --import KEYS \
     && gpg --batch --verify "$DISTRO_NAME.tar.gz.asc" "$DISTRO_NAME.tar.gz" \
     && tar -xzf "$DISTRO_NAME.tar.gz" \
     && mv bookkeeper-server-${BK_VERSION}/ /opt/bookkeeper/ \
