fix spelling error in bookie popover

--- a/site/_data/popovers.yaml
+++ b/site/_data/popovers.yaml
@@ -4,7 +4,7 @@
   d: A ledger is a sequence of entries written to BookKeeper. Entries are written sequentially to ledgers and at most once, giving ledgers append-only semantics.
 - term: bookie
   d: |
-    A bookie is an individial BookKeeper storage server.
+    A bookie is an individual BookKeeper storage server.
 
     Bookies store the content of ledgers and act as a distributed ensemble.
 - term: rereplication
