Issue 432: Add "Google Analytics" to the website

--- a/site/Makefile
+++ b/site/Makefile
@@ -23,7 +23,7 @@ build: clean
 		--config _config.yml
 
 apache: clean
-	${JEKYLL} build \
+	JEKYLL_ENV=production ${JEKYLL} build \
 		--config _config.yml,_config.apache.yml
 
 javadoc:
