publish javadoc for versions under `docs`

--- a/site/Makefile
+++ b/site/Makefile
@@ -27,7 +27,10 @@ apache: clean
 		--config _config.yml,_config.apache.yml
 
 javadoc:
-	scripts/javadoc-gen.sh
+	scripts/javadoc-gen.sh "all"
+
+latest_javadoc:
+	scripts/javadoc-gen.sh "latest"
 
 staging: clean
 	${JEKYLL} build --config _config.yml,_config.staging.yml
