--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -129,6 +129,11 @@
       <version>1.6</version>
     </dependency>
     <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
