BOOKKEEPER-1100: Add module for Bookkeeper Http Endpoint
Add Bookkeeper Http Server as a new module [bookkeeper-http]

1. Add children module [http-server], which provide generic api for setting up a Http Server for bookkeeper, allowing to plugin different Http frameworks and inject the implementation of different BK related services to Http Handler to handle different endpoints

2. Add children module [vertx-http-server], which is a Vertx.io based http server implementation

3. Add children module [twitter-http-server], which is a TwitterServer based http server implementation

4. Add a package or org.apache.bookkeeper.http in [bookkeeper-server], which include all the implementation for the services that handle different http endpoint request.

Author: Yiming Zang <yzang@twitter.com>

Reviewers: Enrico Olivelli <eolivelli@gmail.com>, Sijie Guo <sijie@apache.org>

This patch had conflicts when merged, resolved by
Committer: Sijie Guo <sijie@apache.org>

This closes #278 from yzang/yzang/BOOKKEEPER-1100

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <module>bookkeeper-server</module>
     <module>bookkeeper-benchmark</module>
     <module>bookkeeper-stats-providers</module>
+    <module>bookkeeper-http</module>
   </modules>
   <mailingLists>
     <mailingList>
