Move backward compat tests to a separate module

--- a/bookkeeper-http/pom.xml
+++ b/bookkeeper-http/pom.xml
@@ -27,7 +27,7 @@
     <groupId>org.apache.bookkeeper.http</groupId>
     <artifactId>bookkeeper-http</artifactId>
     <packaging>pom</packaging>
-    <name>Apache BookKeeper :: Bookkeeper-Http</name>
+    <name>Apache BookKeeper :: Bookkeeper Http</name>
     <modules>
         <module>http-server</module>
         <module>twitter-http-server</module>
