Fix the protobuf and guava problem

--- a/bookkeeper-http/vertx-http-server/pom.xml
+++ b/bookkeeper-http/vertx-http-server/pom.xml
@@ -96,6 +96,11 @@
             <version>3.4.1</version>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.bookkeeper.http</groupId>
             <artifactId>http-server</artifactId>
             <version>${project.version}</version>
