--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <module>bookkeeper-benchmark</module>
     <module>bookkeeper-stats-providers</module>
     <module>bookkeeper-http</module>
+    <module>tests</module>
   </modules>
   <mailingLists>
     <mailingList>
@@ -97,6 +98,7 @@
     <!-- dependencies -->
     <guava.version>20.0</guava.version>
     <hamcrest.version>1.3</hamcrest.version>
+    <jmh.version>1.19</jmh.version>
     <junit.version>4.12</junit.version>
     <protobuf.version>2.6.1</protobuf.version>
     <netty.version>4.1.12.Final</netty.version>
@@ -107,7 +109,9 @@
     <findbugs-maven-plugin.version>3.0.4</findbugs-maven-plugin.version>
     <puppycrawl.checkstyle.version>6.19</puppycrawl.checkstyle.version>
     <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+    <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
     <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+    <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
   </properties>
 
