--- a/tests/bookkeeper-server-compat-4.1.0/pom.xml
+++ b/tests/bookkeeper-server-compat-4.1.0/pom.xml
@@ -18,22 +18,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>compat-deps</artifactId>
-    <groupId>org.apache.bookkeeper</groupId>
+    <groupId>org.apache.bookkeeper.tests</groupId>
+    <artifactId>tests-parent</artifactId>
     <version>4.6.0-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
-  <groupId>org.apache.bookkeeper</groupId>
+  <groupId>org.apache.bookkeeper.tests</groupId>
   <artifactId>bookkeeper-server-compat410</artifactId>
-  <name>Apache BookKeeper :: Compability Dependencies :: 4.1.0</name>
+  <name>Apache BookKeeper :: Tests :: Compability Dependencies :: 4.1.0</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-    <dependency>
-      <groupId>com.google.protobuf</groupId>
-      <artifactId>protobuf-java</artifactId>
-      <version>2.4.1</version>
-    </dependency>
     <dependency>
       <groupId>org.apache.bookkeeper</groupId>
       <artifactId>bookkeeper-server</artifactId>
@@ -81,7 +77,7 @@
                 </relocation>
                 <relocation>
                   <pattern>org.apache.zookeeper</pattern>
-                  <shadedPattern>org.apache.bk_v4_1_0.bookkeeper</shadedPattern>
+                  <shadedPattern>org.apache.bk_v4_1_0.zookeeper</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>org.apache.jute</pattern>
