--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
     <!-- dependencies -->
     <guava.version>20.0</guava.version>
     <hamcrest.version>1.3</hamcrest.version>
+    <jmh.version>1.19</jmh.version>
     <junit.version>4.12</junit.version>
     <protobuf.version>3.4.0</protobuf.version>
     <netty.version>4.1.12.Final</netty.version>
