doc: fix sidebar issue for k8s

--- a/site/_data/sidebar.yaml
+++ b/site/_data/sidebar.yaml
@@ -15,8 +15,8 @@ groups:
     endpoint: manual
   - name: BookKeeper on DC/OS
     endpoint: dcos
-  #- name: BookKeeper on Kubernetes
-  #  endpoint: kubernetes
+  - name: BookKeeper on Kubernetes
+    endpoint: kubernetes
 - name: Administration
   dir: admin
   docs:
