make a -all package, make PrometheusMetricsProvider the default

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -467,7 +467,7 @@ ledgerDirectories=/tmp/bk-data
 # enableStatistics=true
 
 # Stats Provider Class (if statistics are enabled)
-#statsProviderClass=org.apache.bookkeeper.stats.CodahaleMetricsProvider
+statsProviderClass=org.apache.bookkeeper.stats.PrometheusMetricsProvider
 
 #############################################################################
 ## Read-only mode support
