--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -283,7 +283,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>${maven-assembly-plugin.version}</version>
         <configuration>
           <descriptors>
             <descriptor>../src/assemble/bin.xml</descriptor>
