--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <module>bookkeeper-stats-providers</module>
     <module>bookkeeper-http</module>
     <module>tests</module>
+    <module>all</module>
   </modules>
   <mailingLists>
     <mailingList>
@@ -115,6 +116,7 @@
     <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+    <maven-assembly-plugin.version>2.2.1</maven-assembly-plugin.version>
   </properties>
 
   <!-- dependencies for all modules -->
@@ -234,7 +236,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>${maven-assembly-plugin.version}</version>
         <configuration>
 	  <tarLongFileMode>gnu</tarLongFileMode>
           <descriptors>
