--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,4 +1,4 @@
-title: Apache BookKeeper
+title: Apache BookKeeper&trade;
 subtitle: A scalable, fault-tolerant, and low-latency storage service optimized for real-time workloads
 github_repo: https://github.com/apache/bookkeeper
 github_master: https://github.com/apache/bookkeeper/tree/master
