--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -70,6 +70,11 @@
       <version>${distributedlog.version}</version>
       <classifier>tests</classifier>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-buffer</artifactId>
+      <version>${netty-buffer.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <extensions>
