ISSUE #499: make a package contains all the jar
Descriptions of the changes in this PR:
This is a sub-task for #458:
Make Prometheus provider the default in bk_server.conf,
Include stats providers in a -all package,

Author: Jia Zhai <zhaijia@apache.org>

Reviewers: Enrico Olivelli <eolivelli@apache.org>

This closes #500 from zhaijack/all_bin, closes #499

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
     <module>bookkeeper-stats-providers</module>
     <module>bookkeeper-http</module>
     <module>tests</module>
+    <module>bookkeeper-dist</module>
   </modules>
   <mailingLists>
     <mailingList>
@@ -119,6 +120,7 @@
     <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
     <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+    <maven-assembly-plugin.version>2.2.1</maven-assembly-plugin.version>
   </properties>
 
   <!-- dependencies for all modules -->
@@ -255,7 +257,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>${maven-assembly-plugin.version}</version>
         <configuration>
 	  <tarLongFileMode>gnu</tarLongFileMode>
           <descriptors>
