--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -470,7 +470,7 @@ ledgerManagerFactoryClass=org.apache.bookkeeper.meta.HierarchicalLedgerManagerFa
 # enableStatistics=true
 
 # Stats Provider Class (if statistics are enabled)
-#statsProviderClass=org.apache.bookkeeper.stats.CodahaleMetricsProvider
+statsProviderClass=org.apache.bookkeeper.stats.PrometheusMetricsProvider
 
 #############################################################################
 ## Read-only mode support
